<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ivory"
    >

    <!-- Camera 按钮   -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/camera_wrap"
        >

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/camera"
            android:src="@drawable/photo"
            android:background="#00000000"


            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/content_block"
            >


            <!--设备识别号-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_ID"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ID"
                    android:textSize="20dp"
                    android:id="@+id/tv_ID"
                    />
            </LinearLayout>

            <!--设备名称-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_name"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:textSize="20dp"
                    android:id="@+id/tv_name"
                    />
            </LinearLayout>

            <!--当前存放位置-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_position"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_position"
                    android:textSize="20dp"
                    android:id="@+id/tv_position"
                    />
            </LinearLayout>


            <!--品牌-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_brand"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_brand"
                    android:textSize="20dp"
                    android:id="@+id/tv_brand"
                    />
            </LinearLayout>

            <!--型号-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_type"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_type"
                    android:textSize="20dp"
                    android:id="@+id/tv_type"
                    />
            </LinearLayout>

            <!--S/N-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_SN"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_SN"
                    android:textSize="20dp"
                    android:id="@+id/tv_SN"
                    />
            </LinearLayout>

            <!--所属系统-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_system"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_system"
                    />
            </LinearLayout>

            <!--入库时间-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_time_input"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_time_input"
                    android:textSize="20dp"
                    android:id="@+id/tv_time_input"
                    />
            </LinearLayout>

            <!--投用时间-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_time_in_use"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/tv_time_in_use"
                    android:text="0000-00-00"
                    android:background="@color/ivory"
                    />
            </LinearLayout>

            <!--测试记录-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_test_log"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/tv_test_log"
                    />
            </LinearLayout>

            <!--最后经办人-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_last_oprater"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/tv_last_operater"
                    />
            </LinearLayout>

            <!--备注-->
            <!--水平线性排列-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_remark"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:hint="@string/hint_remark"
                    android:id="@+id/tv_remark"
                    />
            </LinearLayout>


            <!--两个按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_item"
                    android:id="@+id/save_item"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_items"
                    android:id="@+id/update_items"
                    />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
